--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 grpc.server.port=9091
 spring.jackson.serialization.fail-on-self-references=false
+node-id = ${random.uuid}
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+rabbitmq.queue = queue+$node_id
+rabbitmq.exchange = pow-exchange
