--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-grpc.server.port=9091
+grpc.server.port=9092
+server.port=${PORT:8084}
 spring.jackson.serialization.fail-on-self-references=false
-node-id = ${random.uuid}
-
+node-id=1
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-rabbitmq.queue = queue+$node_id
-rabbitmq.exchange = pow-exchange
+rabbitmq.message-exchange=message-exchange
+rabbitmq.message-queue=message-queue1
+rabbitmq.mined-block-queue=block-queue1
+rabbitmq.block-exchange=block-exchange
