--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-grpc.server.port=9093
-server.port=${PORT:8085}
+grpc.server.port=9090
+server.port=${PORT:8080}
 spring.jackson.serialization.fail-on-self-references=false
-node-id=2
-spring.rabbitmq.host=localhost
+node-id=${NODE_ID}
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 rabbitmq.message-exchange=message-exchange
-rabbitmq.message-queue=message-queue2
-rabbitmq.mined-block-queue=block-queue2
+rabbitmq.message-queue=${MESSAGE_QUEUE}
+rabbitmq.mined-block-queue=${BLOCK_QUEUE}
 rabbitmq.block-exchange=block-exchange
